# Pulsewatch

./: .env  .gitignore  Cargo.toml  docker-compose.yml  justfile
.github/workflows/: rust.yml
.init/: 001_extensions.sql  010_users.sql  020_user_credentials.sql  030_sessions.sql  040_login_attempts.sql  050_password_resets.sql
.optionalQueries/: deleteUser.sql  purgeExpiredSessions.sql  recentFailedLoginAttempts.sql
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  main.rs
crates/domain/: Cargo.toml
crates/domain/src/: password.rs
crates/storage/: Cargo.toml
crates/storage/.sqlx/: query-80b6435d2ca228afa51251e22a1dda18fafc309e6bd42f44f4b2ce0921a3e03e.json  query-8f82bd3ad2caef926b628092686b878124c1b8e41c856d10f0df0ceb226e275f.json
crates/storage/src/: lib.rs
migrations/: creation.sql
src/: main.rs
